--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"date-fns": "^4.1.0",
 		"dotenv": "^17.2.0",
 		"express": "^5.1.0",
+		"mongoose": "^8.16.3",
+		"mongoose-sequence": "^6.0.1",
 		"uuid": "^11.1.0"
 	}
 }
