--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "techNotesApp",
+	"name": "technotesapp",
 	"version": "1.0.0",
 	"description": "techNotes MERN Project",
 	"main": "server.js",
@@ -12,11 +12,13 @@
 	"license": "ISC",
 	"type": "commonjs",
 	"dependencies": {
+		"bcrypt": "^6.0.0",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"date-fns": "^4.1.0",
 		"dotenv": "^17.2.0",
 		"express": "^5.1.0",
+		"express-async-handler": "^1.2.0",
 		"mongoose": "^8.16.3",
 		"mongoose-sequence": "^6.0.1",
 		"uuid": "^11.1.0"
