--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@reduxjs/toolkit": "^2.8.2",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
