--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@fvilers/disable-react-devtools": "^1.3.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "dotenv": "^17.2.1",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
